# brick

./: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  LICENSE.txt  README.md  macros.cmake
Debug/: README.md
Release/: chrome-sandbox
Resources/: cef.pak  cef_100_percent.pak  cef_200_percent.pak  cef_extensions.pak
Resources/install/brick/: brick  brick-client.desktop  brick-remote.desktop  brick.desktop
Resources/install/etc/xdg/brick/: example-config.json
Resources/install/usr/share/dbus-1/services/: org.brick.Brick.service
Resources/install/usr/share/menu/: brick.menu
Resources/internals/: login_failed.html  offline.html
Resources/internals/pages/: empty.html  login-failed.html  offline.html  portal-loader.html
Resources/locales/: am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  ru.pak  (+13 more)
Resources/web/assets/css/: default-page.css
Resources/web/pages/: empty.html  home.html  login-failed.html  offline.html  portal-loader.html
brick/: CMakeLists.txt  account.cc  account.cpp  account.h  account_manager.cc  account_manager.cpp  account_manager.h  api_error.h  auth_client.cc  auth_client.h  avatar_client.cc  avatar_client.h  brick_app.cc  brick_app.cpp  brick_app.h  brick_app_linux.cc  brick_app_linux.cpp  brick_types.h  cache_manager.cc  cache_manager.cpp  cache_manager.h  cef_app.cc  cef_app.cpp  cef_app.h  cef_handler.cc  cef_handler.cpp  cef_handler.h  cef_handler_linux.cc  cef_handler_linux.cpp  client_app.cc  client_app.h  client_handler.cc  client_handler.h  client_handler_linux.cc  command_callbacks.h  cookie_cleaner.cc  cookie_cleaner.h  desktop_extension.js  desktop_media.h  desktop_media_linux.cc  (+32 more)
brick-client/: CMakeLists.txt  main.cc  main.h
brick-remote/: CMakeLists.txt  main.cc  main.h
brick/app_indicator/: app_indicator.cc  app_indicator.h  app_indicator_linux.cc
brick/common/: app_settings.cc  app_settings.cpp  app_settings.h
brick/event/: account_list_event.h  account_switch_event.h  download_complete_event.h  download_progress_event.h  download_start_event.h  event.h  event_bus.cc  event_bus.cpp  event_bus.h  event_handler.h  event_object.h  event_sender.h  handler_registration.h  indicator_badge_event.h  indicator_state_event.h  indicator_tooltip_event.h  notification_event.h  sleep_event.h  user_away_event.h
brick/external_interface/: app_message_delegate.cc  app_message_delegate.cpp  app_message_delegate.h  app_window_message_delegate.cc  app_window_message_delegate.h  dbus_protocol.cc  dbus_protocol.cpp  dbus_protocol.h  external_message_delegate.cc  external_message_delegate.cpp  external_message_delegate.h
brick/httpclient/: httpclient.cc  httpclient.cpp  httpclient.h
brick/indicator/: app_indicator_icon.cc  app_indicator_icon.h  base_icon.cc  base_icon.h  gtk2_status_icon.cc  gtk2_status_icon.h  indicator.cc  indicator.h  indicator_linux.cc  unity_launcher.cc  unity_launcher.h
brick/message_delegate/: app_message_delegate.cc  app_message_delegate.cpp  app_message_delegate.h  app_window_message_delegate.cc  app_window_message_delegate.cpp  app_window_message_delegate.h
brick/resource/: desktop_media_resource_provider.h  desktop_media_resource_provider_linux.cc  injected_js_resource_provider.cc  injected_js_resource_provider.h  last_resource_provider.cc  last_resource_provider.h  resource_util.h  resource_util_posix.cc  settings_resource_provider.cc  settings_resource_provider.h  temporary_page_resource_provider.cc  temporary_page_resource_provider.h
brick/status_icon/: status_icon.cpp  status_icon.h  status_icon_linux.cpp
brick/window/: about.glade  about_window.cc  about_window.cpp  about_window.h  about_window_linux.cc  about_window_linux.cpp  accounts.glade  accounts_window.cc  accounts_window.cpp  accounts_window.h  accounts_window_linux.cc  accounts_window_linux.cpp  base_window.cc  base_window.cpp  base_window.h  base_window_linux.cc  base_window_linux.cpp  browser_window.cc  browser_window.cpp  browser_window.h  browser_window_linux.cc  browser_window_linux.cpp  edit_account.glade  edit_account_window.cc  edit_account_window.cpp  edit_account_window.h  edit_account_window_linux.cc  edit_account_window_linux.cpp  main_window.cpp  main_window.h  main_window_linux.cpp  window_features.cc  window_features.h
include/: cef_browser.h  cef_life_span_handler.h  cef_pack_resources.h  cef_pack_strings.h  cef_response.h  cef_version.h
include/base/: cef_weak_ptr.h
include/capi/: cef_browser_capi.h  cef_life_span_handler_capi.h  cef_response_capi.h
include/internal/: cef_types.h
include/wrapper/: cef_message_router.h
libcef_dll/: CMakeLists.txt
libcef_dll/cpptoc/: life_span_handler_cpptoc.cc
libcef_dll/ctocpp/: browser_ctocpp.cc  browser_ctocpp.h  response_ctocpp.cc  response_ctocpp.h
stuff/: brick_client.py  no-more-smiles.js  requirements.txt
